# ChangeLog for dev-lang/swig
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.59 2006/01/07 19:04:31 chriswhite Exp $

  08 Jan 2006; Chris White <chriswhite@gentoo.org> swig-1.3.21.ebuild:
  Since 1.3.25 is not going stable soon, dev-lang/php -> virtual/php.

  08 Dec 2005; Rene Nussbaumer <killerfox@gentoo.org> swig-1.3.25.ebuild:
  Stable on hppa.

  22 Oct 2005; Mike Frysinger <vapier@gentoo.org> swig-1.3.25.ebuild,
  swig-1.3.27.ebuild:
  No longer need to change the java find since the code has been tweaked
  already to handle multiple results.

*swig-1.3.27 (18 Oct 2005)

  18 Oct 2005; Mike Frysinger <vapier@gentoo.org> +swig-1.3.27.ebuild:
  Version bump.

  18 Sep 2005; Chris White <chriswhite@gentoo.org> ChangeLog:
  Re-doing this with proper gpg signing :|

  18 Sep 2005; Chris White <chriswhite@gentoo.org> swig-1.3.21.ebuild:
  Added doc USE flag for html developer docs.

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*swig-1.3.25 (11 Sep 2005)

  11 Sep 2005; Chris White <chriswhite@gentoo.org> +metadata.xml,
  swig-1.3.24.ebuild, +swig-1.3.25.ebuild:
  dev-php/php -> virtual/php. Fixes bug #102364. Taking over as maintainer.
  Did a version bump to fix bug #104762. Tested with some of the tutorials at
  the swig site.

  10 Aug 2005; Kito <kito@gentoo.org> swig-1.3.24.ebuild:
  ~ppc-macos keyword.

  23 Jul 2005; MATSUU Takuto <matsuu@gentoo.org> swig-1.3.21.ebuild:
  Stable on sh.

  19 Feb 2005; Heinrich Wendel <lanius@gentoo.org> -swig-1.3.22.ebuild:
  version bump

  19 Feb 2005; Heinrich Wendel <lanius@gentoo.org> swig-1.3.21.ebuild,
  swig-1.3.22.ebuild:
  disable features=maketest, bug #75650

  19 Feb 2005; Heinrich Wendel <lanius@gentoo.org> swig-1.3.21.ebuild,
  swig-1.3.22.ebuild:
  fix USE

  24 Oct 2004; Heinrich Wendel <lanius@gentoo.org> swig-1.3.21.ebuild,
  swig-1.3.22.ebuild: