@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/swig
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.59 2006/01/07 19:04:31 chriswhite Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.60 2006/01/22 17:26:30 caleb Exp $
+
+  22 Jan 2006; Caleb Tennis <caleb@gentoo.org> -swig-1.3.24.ebuild:
+  Removing p.masked version
 
   08 Jan 2006; Chris White <chriswhite@gentoo.org> swig-1.3.21.ebuild:
   Since 1.3.25 is not going stable soon, dev-lang/php -> virtual/php.
